bk_ida/gccida/c1/maybe_read_ucs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_ucs/src/cpplex.c:2083:1: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_reader_0 *pfile, 
^~~~~~~~~~~~
cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_ucs/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_ucs/src/cpplex.c:2110:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v11] & 0x100) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_ucs/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_ucs/src/obj/cpplex.o] Error 1
